Mutt 1.12.0 uses this function but will run into an GPG_ERR_NOT_IMPLEMENTED when trying to encrypt for S/MIME. Sure, it could also be fixed in Mutt but the behaviour of GPGME is surprising and thus we should fix it here.
Description
Description
Revisions and Commits
Revisions and Commits
| rM GPGME | |||
| rMe9ca36f876e1 core: Make gpgme_op_encrypt_ext work for CMS. | |||
Related Objects
Related Objects
- Mentioned In
- T4551: Release GPGME-1.13.1
- Mentioned Here
- T4551: Release GPGME-1.13.1
Event Timeline
Comment Actions
With the current GPGME master and the forthcoming T4551 release this has been fixed.
However for Mutt the problem is that it should work with older GPGME versions. The solution will be to chnage mutt to use the old way for S/MIME.