core: Make gpgme_op_encrypt_ext work for CMS.

* src/engine-gpgsm.c (gpgsm_encrypt): Fix argument check.
--

It is pretty obvious thar the string based new encrypt function has
never been tested for S/MIME.  The fix was easy.  A followup patch
will extend it to allow for keywords in the future.

GnuPG-bug-id: 4556
Fixes-commit: a1f76b3b54b75a150fe272b804d85ffd40a507a6
Signed-off-by: Werner Koch <wk@gnupg.org>